# processpool-python

./: .pre-commit-config.yaml  Jenkinsfile  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: release.yaml  test_and_build.yml
cognite/processpool/: __init__.py  processpool.py
tests/: test_cancel.py  test_crashes.py  test_kwarg_exception.py  test_nested_pool.py  test_pool.py
