[tool.poetry]
name = "cognite-processpool"
version = "0.4.0"
description = "Stable process pool library"
authors = ["Sander Land <sander.land@cognite.com>"]

packages = [
    { include="cognite", from="." },
]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["pytest", "tblib"]


[tool.poetry.dependencies]
python = "^3.7"
tblib = "^1.6.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
pre-commit = "^2.2.0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"


[[tool.poetry.source]]
name = "snakepit"
url = "https://cognite.jfrog.io/cognite/api/pypi/snakepit/simple"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"